<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="@dimen/dp_5"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_alert_title"
        android:layout_width="match_parent"
        android:textSize="@dimen/sp_18"
        android:textColor="@color/black"
        android:layout_margin="@dimen/dp_10"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_alert_category_name"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/dp_10"

        android:layout_height="wrap_content"
        android:hint="@string/shop_category" />

    <EditText
        android:id="@+id/et_alert_category_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:hint="@string/priority" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_alert_category_back"
            style="@style/button_bg_red"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_15"
            android:layout_weight="1"
            android:text="@string/back" />

        <Button
            android:id="@+id/bt_alert_category_submit"
            style="@style/button_bg_green"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_15"
            android:layout_weight="1"
            android:text="@string/submit" />
    </LinearLayout>

</LinearLayout>