<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ProductListActivity">

    <include  layout="@layout/title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="0dp"
            android:textColor="@color/primary_text"
            android:text="@string/product_name"
            android:paddingLeft="@dimen/dp_10"
            android:textSize="@dimen/sp_18"
            android:layout_weight="1"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/tv_product_status"
            android:layout_width="0dp"
            android:textSize="@dimen/sp_18"
            android:gravity="center"
            android:textColor="@color/primary_text"
            android:text="@string/status"
            android:layout_weight="1"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/tv_product_operation"
            android:textSize="@dimen/sp_18"
            android:layout_width="0dp"
            android:paddingRight="@dimen/dp_10"
            android:gravity="right"
            android:textColor="@color/primary_text"
            android:text="@string/operation"
            android:layout_weight="1"
            android:layout_height="match_parent" />

    </LinearLayout>
    
    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="@dimen/dp_4"
        android:id="@+id/rv_product_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/bt_product_list_back"
            android:layout_weight="1"
            style="@style/button_bg_red"
            android:layout_margin="@dimen/dp_15"
            android:text="@string/back"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <Button
            android:text="@string/add"
            android:id="@+id/bt_product_add"
            android:layout_weight="1"
            style="@style/button_bg_blue"
            android:layout_margin="@dimen/dp_15"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>