<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ProductCategoryManagementActivity">

    <include layout="@layout/title" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_shop_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="@dimen/dp_10"
            android:text="@string/category"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:id="@+id/tv_shop_status"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/priority"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:id="@+id/tv_shop_operation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="@dimen/dp_10"
            android:text="@string/operation"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_18" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_product_category_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4" />

    <Button
        android:id="@+id/bt_shop_category_add"
        style="@style/button_bg_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:text="@string/add" />

</LinearLayout>