<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/shop_name"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/et_add_shop_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@null"
            android:hint="@string/shop_name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/shop_category"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_16" />

        <Spinner
            android:id="@+id/spinner_shop_category"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/shop_area"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_16" />

        <Spinner
            android:id="@+id/spinner_shop_area"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/shop_address"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/et_add_shop_address"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@null"
            android:hint="@string/shop_address" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/phone_num"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/et_add_shop_phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@null"
            android:hint="@string/phone_num" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/shop_desc"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/et_add_shop_desc"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@null"
            android:hint="@string/shop_desc" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/thumbnail"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_16" />


        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_10"
            android:layout_weight="5">

            <ImageView
                android:id="@+id/iv_thumbnail"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/add_image" />

        </FrameLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/verification_code"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/et_add_shop_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@null"
            android:hint="@string/verification_code" />

        <ImageView
            android:id="@+id/iv_add_shop_verification_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_shop_add_back"
            style="@style/button_bg_red"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/back" />

        <Button
            android:id="@+id/bt_shop_add_submit"
            style="@style/button_bg_blue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/submit" />
    </LinearLayout>

</LinearLayout>