<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/product_name"
            android:gravity="center"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/et_add_product_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@null"
            android:hint="@string/product_name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/product_category"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_16" />

        <Spinner
            android:id="@+id/spinner_product_category"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/priority"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/et_add_product_priority"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@null"
            android:hint="@string/priority" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/normal_price"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/et_add_product_normal_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@null"
            android:hint="@string/normal_price" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/promotion_price"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/et_add_product_promotion_price"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@null"
            android:hint="@string/promotion_price" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/integration"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/et_add_product_integration"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@null"
            android:hint="@string/integration" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/thumbnail"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_16" />


        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_10"
            android:layout_weight="5">

            <ImageView
                android:id="@+id/iv_thumbnail"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/add_image" />

        </FrameLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/details_picture"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_16" />


        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_10"
            android:layout_weight="5">

            <ImageView
                android:id="@+id/iv_details_picture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/add_image" />

        </FrameLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/verification_code"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/et_add_product_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@null"
            android:hint="@string/verification_code" />

        <ImageView
            android:id="@+id/iv_add_product_verification_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_product_add_back"
            style="@style/button_bg_red"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/back" />

        <Button
            android:id="@+id/bt_product_add_submit"
            style="@style/button_bg_blue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/submit" />
    </LinearLayout>

</LinearLayout>