<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_product_name"
        android:layout_width="0dp"
        android:textSize="@dimen/sp_16"
        android:paddingLeft="@dimen/dp_10"
        android:layout_weight="1"
        android:layout_height="match_parent" />
    <TextView
        android:id="@+id/tv_product_priority"
        android:layout_width="0dp"
        android:textSize="@dimen/sp_16"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_product_edit"
            android:textSize="@dimen/sp_16"
            android:layout_width="0dp"
            android:paddingRight="@dimen/dp_10"
            android:text="@string/edit"
            android:textColor="@color/blue"
            android:layout_weight="1"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/tv_product_off"
            android:textSize="@dimen/sp_16"
            android:layout_width="0dp"
            android:paddingRight="@dimen/dp_10"
            android:textColor="@color/blue"
            android:text="@string/off"
            android:layout_weight="1"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/tv_product_preview"
            android:textSize="@dimen/sp_16"
            android:layout_width="0dp"
            android:paddingRight="@dimen/dp_10"
            android:textColor="@color/blue"
            android:text="@string/preview"
            android:layout_weight="1"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>